--- a/annotum-base/assets/main/less/tools.less
+++ b/annotum-base/assets/main/less/tools.less
@@ -5,7 +5,9 @@
 .tools-bar .cell {
 	float: left;
 }
-
+.tools-bar {
+	line-height: 20px;
+}
 .tools-bar .print {
 	margin-right: 50px;
 }
